# practica2-calidadsoft

./: .gitignore  CI_CD_SETUP.md  File1.py  File2.py  File3.py  File4.py  File5.py  Main.py  README.md  analyze.sh  config.json  configuration.py  dashboard.py  model_manager.py  models.py  performance.py  pyproject.toml  ruff-report.json  sonar-project.properties
.github/workflows/: code-quality.yml
data/: dashboard.html
