[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "huggingface-model-monitor"
version = "1.0.0"
description = "A comprehensive monitoring system for Hugging Face models"
authors = [
    {name = "Francisco Javier De La Torre Silva", email = "student@iteso.mx"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/example/huggingface-model-monitor"
Repository = "https://github.com/example/huggingface-model-monitor"
Documentation = "https://github.com/example/huggingface-model-monitor#readme"
"Bug Tracker" = "https://github.com/example/huggingface-model-monitor/issues"

[project.scripts]
hf-monitor = "Main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

# Ruff configuration for code quality
[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "myenv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "PLR", # pylint refactor (complexity, design patterns)
    "S",   # flake8-bandit (security issues)
    "T20", # flake8-print (no print statements in production)
    "ERA", # eradicate (commented code detection)
    "PD",  # pandas-vet (pandas best practices)
]

# Ignore specific rules
ignore = [
    # Warnings that are too verbose for demo code
    "W291", # Trailing whitespace
    "W292", # No newline at end of file
    "W293", # Blank line contains whitespace
    
    # Bugbear rules that are too strict for demo
    "B008", # Do not perform function calls in argument defaults
    "B023", # Function definition does not bind loop variable
    
    # Pyupgrade rules that might be too aggressive
    "UP007", # Use X | Y for type annotations
    "UP032", # Use f-string instead of format call
    "UP035", # Import from typing instead of typing_extensions
    
    # Simplify rules that might be too opinionated
    "SIM102", # Use a single if-statement instead of nested if-statements
    "SIM108", # Use ternary operator instead of if-else-block
    "SIM114", # Combine if branches using logical operator
    "SIM116", # Use dictionary instead of conditional assignment
    "SIM118", # Use key in dict instead of key in dict.keys()
    
    # Ruff specific rules that might be too strict
    "RUF001", # String contains ambiguous character
    "RUF002", # Docstring contains ambiguous character
    "RUF003", # Comment contains ambiguous character
    
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert
    "T201",    # Print found (we need prints for demo)
    "ERA001",  # Found commented-out code
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow fix for all enabled rules (when `--fix`)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["PLR2004", "S101", "T201"]
"**/tests/*" = ["PLR2004", "S101", "T201"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["models", "model_manager", "configuration", "performance", "dashboard"]
force-sort-within-sections = true

# Black configuration for code formatting
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | myenv
)/
'''

# MyPy configuration for type checking
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/.venv/*",
    "*/myenv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.13.0",
]
